Replace `Arrays.asList` with `List.of` or `Collections.singletonList` for cleaner and immutable list creation
Signed-off-by: Balázs Szücs <bszucs1209@gmail.com>